# xarm_shape_tracer

./: README.md  package.xml  setup.cfg  setup.py
config/: xarm_params.yaml
launch/: trace_shapes.launch.py
test/: test_shapes.py
xarm_shape_tracer/: shape_converter.py  shape_tracer_node.py  trajectory_planner.py  utils.py
